# robot_arm

./: CMakeLists.txt  LIB.txt  README.md  README.txt
shaders/: fragment.glsl  vertex.glsl
src/: BoxObject.cpp  BoxObject.h  Camera.cpp  Camera.h  Gripper.cpp  Gripper.h  GuiManager.cpp  GuiManager.h  IKController.cpp  IKController.h  InputManager.cpp  InputManager.h  Recorder.cpp  Recorder.h  Renderer.cpp  Renderer.h  RobotArm.cpp  RobotArm.h  Scene.cpp  Scene.h  Segment.cpp  Segment.h  ShaderProgram.cpp  ShaderProgram.h  Simulation.cpp  Simulation.h  main.cpp
